[package]
name = "commonware-deployer"
edition.workspace = true
publish = true
version.workspace = true
license.workspace = true
description = "Deploy infrastructure across cloud providers."
readme = "README.md"
homepage.workspace = true
repository = "https://github.com/commonwarexyz/monorepo/tree/main/deployer"
documentation = "https://docs.rs/commonware-deployer"

[lints]
workspace = true

[features]
default = [ "aws" ]
aws = [
	"aws-config",
	"aws-sdk-ec2",
	"clap",
	"futures",
	"reqwest",
	"thiserror",
	"tokio",
	"tracing",
	"tracing-subscriber",
	"uuid",
]

[dependencies]
aws-config = { workspace = true, optional = true }
aws-sdk-ec2 = { workspace = true, optional = true }
cfg-if.workspace = true
clap = { workspace = true, optional = true }
futures = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
serde_yaml.workspace = true
thiserror = { workspace = true, optional = true }
tokio = { workspace = true, features = ["full"], optional = true }
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
uuid = { workspace = true, features = ["v4"], optional = true }

[[bin]]
name = "deployer"
path = "src/main.rs"
bench = false
required-features = ["aws"]

[lib]
bench = false
