[package]
name = "commonware-deployer"
edition.workspace = true
publish = true
version.workspace = true
license.workspace = true
description = "Deploy infrastructure across cloud providers."
readme = "README.md"
homepage.workspace = true
repository = "https://github.com/commonwarexyz/monorepo/tree/main/deployer"
documentation = "https://docs.rs/commonware-deployer"

[lints]
workspace = true

[features]
default = [ "aws" ]
aws = [
	"aws-config",
	"aws-sdk-cloudfront",
	"aws-sdk-ec2",
	"aws-sdk-s3",
	"aws-sdk-sts",
	"base64",
	"chrono",
	"clap",
	"commonware-cryptography",
	"futures",
	"rand",
	"reqwest",
	"rsa",
	"serde_json",
	"thiserror",
	"tokio",
	"tracing",
	"tracing-subscriber",
	"uuid",
]

[dependencies]
aws-config = { workspace = true, optional = true }
aws-sdk-cloudfront = { workspace = true, optional = true }
aws-sdk-ec2 = { workspace = true, optional = true }
aws-sdk-s3 = { workspace = true, optional = true }
aws-sdk-sts = { workspace = true, optional = true }
base64 = { version = "0.22", optional = true }
rand = { workspace = true, optional = true }
rsa = { version = "0.9", optional = true, features = ["sha2"] }
serde_json = { workspace = true, optional = true }
cfg-if.workspace = true
chrono = { workspace = true, optional = true }
clap = { workspace = true, optional = true }
commonware-cryptography = { workspace = true, optional = true }
futures = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
serde_yaml.workspace = true
thiserror = { workspace = true, optional = true }
tokio = { workspace = true, features = ["full"], optional = true }
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
uuid = { workspace = true, features = ["v4"], optional = true }

[[bin]]
name = "deployer"
path = "src/main.rs"
bench = false
required-features = ["aws"]

[lib]
bench = false
