[package]
name = "commonware-macros"
edition.workspace = true
publish = true
version.workspace = true
license.workspace = true
description = "Augment the development of primitives with procedural macros."
readme = "README.md"
homepage.workspace = true
repository = "https://github.com/commonwarexyz/monorepo/tree/main/macros"
documentation = "https://docs.rs/commonware-macros"

[lib]
bench = false
proc-macro = true

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures = { workspace = true }
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
proc-macro-crate = "3.4.0"

[dev-dependencies]
futures-timer = "3.0.3"

# `futures-timer` is exercised only in doctests, so cargo-udeps flags it falsely.
[package.metadata.cargo-udeps.ignore]
development = ["futures-timer"]
