[package]
name = "commonware-math"
edition.workspace = true
publish = true
version.workspace = true
license.workspace = true
description = "Create and manipulate mathematical objects."
readme = "README.md"
homepage.workspace = true
repository = "https://github.com/commonwarexyz/monorepo/tree/main/math"
documentation = "https://docs.rs/commonware-math"

[lints]
workspace = true

[features]
arbitrary = [
	"commonware-codec/arbitrary",
	"commonware-utils/arbitrary",
	"dep:arbitrary",
	"std",
]
default = [ "std", "fuzz" ]
test_strategies = [ "dep:proptest", "std" ]
std = [
	"bytes/std",
	"commonware-codec/std",
	"commonware-macros/std",
	"commonware-parallel/std",
	"commonware-utils/std",
	"rand_core/std",
]
fuzz = [
	"dep:commonware-test",
	"dep:proptest",
	"dep:proptest-derive",
	"std"
]

[dependencies]
arbitrary = { workspace = true, optional = true }
bytes.workspace = true
commonware-codec.workspace = true
commonware-macros.workspace = true
commonware-parallel.workspace = true
commonware-test = { workspace = true, optional = true }
commonware-utils.workspace = true
proptest = { workspace = true, optional = true }
proptest-derive = { workspace = true, optional = true }
rand_core.workspace = true

[dev-dependencies]
commonware-conformance.workspace = true
proptest.workspace = true
rand.workspace = true
rand_chacha.workspace = true

[lib]
bench = false
crate-type = ["rlib", "cdylib"]
