[package]
name = "commonware-parallel"
edition.workspace = true
publish = true
version.workspace = true
license.workspace = true
description = "Parallelize fold operations with pluggable execution strategies."
readme = "README.md"
homepage.workspace = true
repository = "https://github.com/commonwarexyz/monorepo/tree/main/parallel"

[lints]
workspace = true

[dependencies]
cfg-if.workspace = true
commonware-macros.workspace = true
dashmap = { workspace = true, optional = true }
futures = { workspace = true, optional = true }
rayon = { workspace = true, optional = true }

[dev-dependencies]
dashmap.workspace = true
futures.workspace = true
proptest.workspace = true
rayon.workspace = true

[features]
default = [ "std" ]
std = [ "commonware-macros/std", "dep:dashmap", "dep:futures", "dep:rayon" ]
