[package]
name = "commonware-resolver"
edition = "2021"
publish = true
version = "0.0.1"
license = "MIT OR Apache-2.0"
description = "Resolve data identified by a fixed-length key."
readme = "README.md"
homepage = "https://commonware.xyz"
repository = "https://github.com/commonwarexyz/monorepo/tree/main/resolver"
documentation = "https://docs.rs/commonware-resolver"

[dependencies]
commonware-cryptography = { workspace = true }
commonware-macros = { workspace = true }
commonware-p2p = { workspace = true }
commonware-runtime = { workspace = true }
commonware-stream = { workspace = true }
commonware-utils = { workspace = true }
bimap = { workspace = true }
bytes = { workspace = true }
rand = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
prost = { workspace = true }
governor = { workspace = true }
prometheus-client = { workspace = true }
thiserror = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }

[lib]
bench = false
