[package]
name = "commonware-restaking"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
alloy = { version = "0.9.2", features = ["full"] }

[dev-dependencies]
tower = { version = "0.4", features = ["full"] }
alloy-json-rpc = "0.9.2"
alloy-node-bindings = "0.9.2"
tokio = { version = "1", features = ["full"] }
rand = { workspace = true }

[build-dependencies]
anyhow = "1.0"
