[package]
name = "commonware-runtime"
edition.workspace = true
publish = true
version.workspace = true
license.workspace = true
description = "Execute asynchronous tasks with a configurable scheduler."
readme = "README.md"
homepage.workspace = true
repository = "https://github.com/commonwarexyz/monorepo/tree/main/runtime"
documentation = "https://docs.rs/commonware-runtime"

[dependencies]
libc = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
bytes = { workspace = true }
rayon = { workspace = true }
cfg-if = { workspace = true }
futures = { workspace = true }
sysinfo = { workspace = true }
tracing = { workspace = true }
governor = { workspace = true }
io-uring = { workspace = true, optional = true }
thiserror = { workspace = true }
async-lock = { workspace = true }
pin-project = { workspace = true, optional = true }
opentelemetry = { workspace = true }
commonware-utils = { workspace = true, features = ["std"] }
commonware-macros = { workspace = true }
prometheus-client = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt", "json", "env-filter"] }
tracing-opentelemetry = { workspace = true }

[features]
default = []
external = ["pin-project"]
test-utils = []
iouring-storage = ["io-uring"]
iouring-network = ["io-uring"]
tokio-console = ["dep:console-subscriber", "tokio/tracing"]

# Enable "js" feature when WASM is target
[target.'cfg(target_arch = "wasm32")'.dependencies.getrandom]
version = "0.2.15"
features = ["js"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
axum = { workspace = true }
tokio = { workspace = true, features = ["full"] }
criterion = { workspace = true, features = ["async"] }
opentelemetry_sdk = { workspace = true, features = ["rt-tokio"] }
opentelemetry-otlp = { workspace = true, features = ["http-proto"] }

# `tokio-console` feature dependencies
console-subscriber = { workspace = true, features = ["parking_lot"], optional = true }

[lib]
bench = false
crate-type = ["rlib", "cdylib"]
